# qv-session-manager

./: .gitignore  LICENSE  README.md  TASKS.md  pyproject.toml
examples/: basic_usage.py
src/qv_session_manager/: __init__.py  session_manager.py
tests/: test_session_manager.py
